# fknc-calc-source

./: .gitignore  CONTRIBUTE.md  ENHANCE.md  README.md  SPRINKERS.md  calc.py  crop_table.py  plants.json  pyproject.toml  ui.py
src/fknc_calc/: __init__.py  mutations.json  plants.json  rules.py
tools/: co-efficient.py  extract.py  process.sh
