[project]
name = "fknc-calc"
version = "0.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "orjson>=3.11.9",
    "pydantic>=2.13.4",
    "pypinyin>=0.55.0",
    "streamlit>=1.58.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = ["playwright>=1.60.0"]
